tests/files/type_checker_tests/should_pass/225.cmdr
//Test that functions type check
fn add() { return 3 + 4; }
add();
x = add();
