tests/files/type_checker_tests/should_fail/214.cmdr
//Should not allow redefining functions as variables
fn add(x, y) {
	return x + y;
}
add = 3;